dev/modules/nica.tf
resource "azurerm_network_interface_security_group_association" "nica" {
  network_interface_id      = azurerm_network_interface.nic.id
  network_security_group_id = azurerm_network_security_group.nsg.id
}
