dev/modules/subnet.tf
# subnet
resource "azurerm_subnet" "subnet" {
  name                 = "${var.service_name}-subnet"
  resource_group_name  = azurerm_resource_group.rg.name
  virtual_network_name = azurerm_virtual_network.vnet.name
  address_prefixes     = ["10.0.2.0/24"]
}
